--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
 	"type": "module",
 	"license": "MIT",
 	"dependencies": {
+		"cookie": "^0.4.1",
 		"dotenv": "^15.0.0",
-		"mysql2": "^2.3.3"
+		"mysql2": "^2.3.3",
+		"nanoid": "^3.2.0"
 	}
 }
