:wrench: Update config

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+MODE=DEVELOPMENT
+
+GH_PRODUCTION_CLIENT_ID=
+GH_PRODUCTION_CLIENT_SECRET=
+
+
+GH_DEVELOPMENT_CLIENT_ID=
+GH_DEVELOPMENT_CLIENT_SECRET=
+
 DB_URL=
-GH_CLIENT_ID=
-GH_CLIENT_SECRET=
+
+IMGUR_ID=
+IMGUR_SECRET=
