--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
 		"dotenv": "^15.0.0",
 		"mysql2": "^2.3.3",
 		"nanoid": "^3.2.0",
-		"pino": "^7.6.5",
-		"pino-pretty": "^7.5.1"
+		"pino": "^7.6.5"
 	}
 }
