--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.9.4",
 		"tailwindcss": "^3.0.18",
+		"tailwindcss-textshadow": "^2.1.3",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
